# xdf_rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  LICENSE_APACHE  README.md  str_test.xdf
.github/workflows/: ci.yaml
benches/: parse_files.rs  pyxdf_comparison.py
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/afl_xdf/: Cargo.toml  Justfile
fuzz/afl_xdf/src/: main.rs
fuzz/hfuzz_xdf/: Cargo.toml  Justfile
fuzz/src/: main.rs
src/: chunk_structs.rs  errors.rs  lib.rs  main.rs  raw_chunks.rs  sample.rs  streams.rs  util.rs
src/parsers/: boundary.rs  chunk_content.rs  chunk_length.rs  chunk_parsers.rs  chunk_tags.rs  clock_offset.rs  file_header.rs  mod.rs  samples.rs  stream_footer.rs  stream_header.rs  stream_id.rs  values.rs  xdf_file.rs  xml.rs
src/tests/: tests.rs
src/writer/: error.rs  mod.rs  stream_builder.rs  stream_format.rs  stream_handle.rs  stream_writer.rs  timestamp.rs  xdf_builder.rs
tests/: chunk_length_lie.xdf  integration_tests.rs  out_of_order_sample_chunk.xdf  tests.rs  write.rs  write_tests.rs
tests/read/: minimal.md  minimal.xdf  out_of_order_clock_offsets.xdf  read_tests.rs
tests/write/: write_tests.rs
