[package]
name = "xdf"
version = "0.1.0"
edition = "2021"
exclude = ["example-files", "!example-files/minimal.xdf", ".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
nom = "7.1.3"
thiserror = "1.0.56"
xmltree = "0.10.3"

[dev-dependencies]
criterion = "0.5.1"

[profile.profiler]
inherits = "release"
debug = true
strip = "none"

[lib]
bench = false

[[bench]]
name = "parse_files"
harness = false
