[package]
name = "xdf"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Garfield100/xdf_rs"
exclude = ["example-files", ".*", "/fuzz"]
description = "Read XDF Files"
keywords = [
    "XDF",
    "EEG",
] # this file format is commonly output by electroencephalogram recorders
categories = ["parser-implementations", "science::neuroscience"]

[dependencies]
nom = { version = "7.1.3", optional = true }
strict-num = { version = "0.2.0", default-features = false, optional = true }
thiserror = "1.0.56"
tracing = "0.1.41"
xmltree = "0.10.3"
zerocopy = { version = "0.8.25", optional = true }

[dev-dependencies]
criterion = "0.5.1"
paste = "1.0.15"
test-log = { version = "0.2.17", features = ["trace"] }

[profile.profiler]
inherits = "release"
debug = true
strip = "none"

# criterion wants the following:
[lib]
bench = false

[[bench]]
name = "parse_files"
harness = false

[features]
default = ["read", "write"]
read = ["dep:nom"]
write = ["dep:strict-num", "dep:zerocopy"]
